--- a/front/style.css
+++ b/front/style.css
@@ -13,6 +13,18 @@ ul.endpoint-list {
   width: 70%;
 }
 
+#feed-preview {
+  width: 90%;
+  height: 50%;
+  border: none;
+  position: absolute;
+}
+
+.CodeMirror {
+  /* overriding the default height from CodeMirror.css */
+  height: 100% !important;
+}
+
 .endpoint {
   padding: 0.2rem;
   background-color: #f4f4f4;
