--- a/inspector/src/style.css
+++ b/inspector/src/style.css
@@ -22,10 +22,18 @@ body {
   right: 0;
 }
 
-#navigation-panel {
-  --nav-panel-width: 20rem;
-  width: var(--nav-panel-width);
+.gutter.gutter-horizontal {
+  background-color: #eee;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==");
+  height: 300px;
+  margin: auto 5px;
+  cursor: col-resize;
+  border-radius: 10px;
+}
 
+#nav-panel {
   > div {
     display: flex;
     flex-direction: column;
@@ -37,7 +45,6 @@ body {
     overflow-y: auto;
     margin-top: 0;
     margin-bottom: 0;
-    padding: 0.3rem;
   }
 
   h4 {
@@ -97,7 +104,7 @@ ul#filter-list {
     padding: 0.4rem 0.6rem 0.6rem 0.6rem;
     border: 1px dotted #ddd;
     border-radius: 0.3rem;
-    max-width: var(--nav-panel-width);
+    width: 100%;
 
     .filter-header {
       font-size: 1.2em;
@@ -192,12 +199,11 @@ ul#filter-list {
   }
 }
 
-#main {
+#main-panel {
   flex: 1;
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  margin-left: 1rem;
 }
 
 #request-param {
