--- a/inspector/src/style.css
+++ b/inspector/src/style.css
@@ -264,6 +264,19 @@ ul#filter-list {
       color: #666;
     }
   }
+
+  #view-mode-selector {
+    display: flex;
+    z-index: 1;
+    flex-direction: row;
+    gap: 0.5rem;
+    right: 0;
+    margin-right: 1rem;
+    background-color: #ffffff;
+    padding: 0.5rem;
+    position: absolute;
+    box-shadow: 0 1px 2px #ddd;
+  }
 }
 
 #feed-preview .cm-editor.cm-focused {
@@ -293,11 +306,6 @@ ul#filter-list {
       padding-bottom: 0.5rem;
       font-size: 1.2em;
       border-bottom: 1px solid #ddd;
-    }
-
-    .feed-post-link {
-      font-size: 0.8em;
-      margin-top: 0.5rem;
     }
   }
 }
