fix source info-box display

--- a/inspector/src/style.css
+++ b/inspector/src/style.css
@@ -134,10 +134,11 @@ table th {
 
   #source-info {
     margin: 1rem 0;
-    overflow-x: scroll;
 
     content {
       position: relative;
+      overflow-x: scroll;
+      display: block;
 
       .format-tag {
         position: absolute;
