--- a/static/endpoint.css
+++ b/static/endpoint.css
@@ -30,6 +30,10 @@
     }
   }
 
+  .entry-title {
+    flex-grow: 1;
+  }
+
   .entry-content {
     display: none;
   }
@@ -37,22 +41,25 @@
     .entry-content.rendered {
       display: block;
       overflow-x: scroll;
+      background-color: var(--bg);
     }
   }
   &[data-display-mode="raw"] {
     .raw-icon > .icon {
-      color: var(--active);
+      color: var(--fg-active);
     }
     .entry-content.raw {
       display: block;
+      background-color: unset;
     }
   }
   &[data-display-mode="json"] {
     .json-icon > .icon {
-      color: var(--active);
+      color: var(--fg-active);
     }
     .entry-content.json {
       display: block;
+      background-color: unset;
     }
   }
 }
@@ -86,7 +93,7 @@
 .filter-item {
   position: relative;
 
-  > var {
+  > .filter-name {
     cursor: pointer;
   }
 
@@ -112,7 +119,7 @@
     z-index: 1;
     border: 1px solid var(--bd-muted);
     border-radius: var(--bd-radius);
-    box-shadow: 1px 2px 3px var(--bd-muted);
+    box-shadow: 2px 2px 3px var(--shadow);
   }
 }
 
@@ -123,6 +130,7 @@
   display: flex;
   position: relative;
   align-items: center;
+  width: 100%;
 }
 .source-template-container {
   display: flex;
@@ -143,12 +151,11 @@ main.feed-section {
 }
 
 .header-bar {
-  margin: 1rem 0 !important;
-  padding-bottom: 1rem;
-  border-bottom: 1.5px dotted;
-  display: flex;
-  align-items: center;
-  height: 2rem;
+  /* padding-bottom: 1rem; */
+  /* border-bottom: 1.5px dotted; */
+  /* display: flex; */
+  /* align-items: center; */
+  /* height: 2rem; */
 
   > h2 {
     flex: 1;
@@ -171,12 +178,37 @@ main.feed-section {
 }
 
 .filter-item {
-  var.filter-name[data-enabled="0"] {
-    color: var(--muted);
+  .filter-name[data-enabled="0"] {
+    color: var(--fg-muted);
     background-color: var(--bg-muted);
   }
 }
 
 pre[class*="language"] {
   margin: 0 !important;
+}
+
+.config-section {
+  padding: 1.5rem;
+}
+
+.source-and-config {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.filter-item {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+
+  .filter-name {
+    font-family: monospace;
+    color: var(--fg-active);
+    background-color: var(--bg-muted);
+    padding: 0.2rem 0.5rem;
+    border-radius: var(--bd-radius);
+    cursor: pointer;
+  }
 }
