--- a/static/common.css
+++ b/static/common.css
@@ -20,6 +20,90 @@
   --bg-remote: #d6d8d9;
 }
 
+body {
+  & > header,
+  section,
+  main {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 800px;
+  }
+
+  & > section {
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+  }
+}
+
+.header-bar {
+  padding: 0.5rem 0;
+  border-bottom: 1.5px dotted;
+  display: flex;
+  align-items: center;
+
+  h2 {
+    flex: 1;
+    margin: 0;
+  }
+}
+
+article {
+  margin: 1rem;
+  padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+  background-color: var(--bg);
+  border-radius: var(--bd-radius);
+
+  & > header {
+    border-bottom: 1px solid;
+    display: flex;
+    max-width: 100%;
+  }
+  & > footer {
+    border-top: 1px solid;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  & > section {
+    max-width: 100%;
+  }
+}
+
+button {
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+}
+
+/* Utility classes */
+
+.flex {
+  display: flex;
+}
+
+.grow {
+  flex: 1;
+}
+
+.inline {
+  display: inline;
+}
+
+.flash {
+  border-radius: var(--bd-radius);
+  padding: 0.5rem;
+  border: 1px solid;
+
+  &.error {
+    color: red;
+    border-color: red;
+  }
+}
+
 .tag-container {
   margin: 0 0.5rem;
   display: inline-flex;
@@ -57,86 +141,5 @@
         color: var(--fg-active);
       }
     }
-  }
-}
-
-body {
-  & > header,
-  section,
-  main {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 800px;
-  }
-
-  & > section {
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-  }
-}
-
-.header-bar {
-  padding: 0.5rem 0;
-  border-bottom: 1.5px dotted;
-  display: flex;
-  align-items: center;
-
-  h2 {
-    margin: 0;
-  }
-}
-
-.flash {
-  border-radius: var(--bd-radius);
-  padding: 0.5rem;
-  border: 1px solid;
-
-  &.error {
-    color: red;
-    border-color: red;
-  }
-}
-
-article {
-  margin: 1rem;
-  padding: 0.5rem;
-  display: flex;
-  flex-direction: column;
-  gap: 0.2rem;
-  background-color: var(--bg);
-  border-radius: var(--bd-radius);
-
-  & > header {
-    border-bottom: 1px solid;
-    display: flex;
-    max-width: 100%;
-  }
-  & > footer {
-    border-top: 1px solid;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  & > section {
-    max-width: 100%;
-  }
-}
-
-.flex {
-  display: flex;
-
-  &.grow {
-    flex: 1;
-  }
-}
-
-.inline {
-  display: inline;
-}
-
-button {
-  a {
-    color: inherit;
-    text-decoration: none;
   }
 }
