--- a/static/common.css
+++ b/static/common.css
@@ -106,6 +106,11 @@ button {
     color: red;
     border-color: red;
   }
+
+  &.success {
+    color: green;
+    border-color: green;
+  }
 }
 
 .tag-container {
